Added AD authentication key in WEB.CONFIG

--- a/Lapbase Application/Web.config
+++ b/Lapbase Application/Web.config
@@ -9,6 +9,13 @@
     <add key="webpages:Enabled" value="false"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+    <clear/>
+    <!-- This is for AD Authentication -->
+    <add key="Domain Name" value="lb.local"/>
+    <add key="Database Name" value="DESKTOP-Q5MQR2F\LBDB"/>
+    <add key=“SQL Instance Name“ value="DESKTOP-Q5MQR2F\LBDB"/>
+    <add key=“User ID“ value="lb.local"/>
+    <add key="User Password" value="lb.local"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
