--- a/Lapbase Application/Web.config
+++ b/Lapbase Application/Web.config
@@ -11,11 +11,11 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <clear />
     <!-- This is for AD Authentication -->
-    <add key="Domain Name" value="l.b" />
+    <add key="Domain Name" value="lapbase.local" />
     <add key="Database Name" value="" />
     <add key="SQL Instance Name" value="" />
-    <add key="User ID" value="abc" />
-    <add key="User Password" value="123456" />
+    <add key="User ID" value="test" />
+    <add key="User Password" value="Dhruv123" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
