Active Directory Finished

--- a/Lapbase Application/Web.config
+++ b/Lapbase Application/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301879
@@ -14,8 +14,8 @@
     <add key="Domain Name" value="lapbase.local" />
     <add key="Database Name" value="" />
     <add key="SQL Instance Name" value="" />
-    <add key="User ID" value="test" />
-    <add key="User Password" value="Dhruv123" />
+    <add key="User ID" value="" />
+    <add key="User Password" value="" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
@@ -24,10 +24,12 @@
     <authorization>
       <deny users="?" />
     </authorization>
+    
     <httpModules>
       <add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
+        <identity impersonate="true" password="Dhruv123" userName="LAPBASE\test" />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -81,3 +83,5 @@
     </compilers>
   </system.codedom>
 </configuration>
+
+
