--- a/Lapbase Application/Web.config
+++ b/Lapbase Application/Web.config
@@ -29,7 +29,7 @@
       <add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
-        <identity impersonate="true" password="Dhruv123" userName="LAPBASE\test" />
+        <identity impersonate="true" password="" userName="" />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
