--- a/Lapbase Application/Web.config
+++ b/Lapbase Application/Web.config
@@ -16,6 +16,12 @@
     <add key="SQL Instance Name" value="" />
     <add key="User ID" value="" />
     <add key="User Password" value="" />
+    <!-- This is Reset Password Email Config -->
+    <add key="EmailID" value="lapbase1care@gmail.com" />
+    <add key="EmailPass" value="Test@1234" />
+    <add key="SMTPPort" value="587" />
+    <add key="Host" value="smtp.gmail.com" />
+
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
